--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -2,4 +2,4 @@ blank_issues_enabled: false
 contact_links:
   - name: Questions
     url: https://discord.gg/Byjr6rdBUZ
-    about: Any questions or comments you have, let us know in our Discord server.
+    about: Any questions or comments you have, let us know on our Discord server.
